# starlette-resource

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
starlette_resource/: __init__.py  resource.py  websocket_resource.py
tests/: conftest.py  sample_app.py  test_resource.py  test_websocket_resource.py
