[tool.poetry]
name = "starlette-resource"
version = "0.1.1"
description = "Starlette resource that helps you follow a layered architecture."
authors = ["Gabriel Couture"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.31.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
